priv/combined_metrics/samples/function_design/boolean_function_has_question_mark/bad/predicates.js
class User {
  admin() {
    return this.role === "admin";
  }

  checkPermission(perm) {
    return this.permissions.includes(perm);
  }

  active() {
    return !this.banned && this.confirmedAt != null;
  }

  verified() {
    return this.emailVerified && this.phoneVerified;
  }

  expired() {
    return this.expiresAt < new Date();
  }

  getSubscriptionValid() {
    return this.subscription && !this.subscription.expired;
  }
}
